# monoidal-functors

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  hie.yaml  justfile  monoidal-functors.cabal  overlay.nix  plan.json  shell.nix
.github/workflows/: cabal.yml  haskell.yml  nix.yml
ci/: 8.10.7.project  8.10.7.project.freeze  9.0.1.project  9.0.1.project.freeze
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.2/: monoidal-functors-0.1.0.0-inplace.conf  package.cache
examples/co-log/: Main.hs
laws-test/: Main.hs
laws/Control/Category/Cartesian/: Laws.hs
laws/Control/Category/Laws/: Internal.hs
laws/Control/Category/Tensor/: Laws.hs
laws/Data/Bifunctor/Monoidal/: Laws.hs
laws/Data/Functor/Monoidal/: Laws.hs
nix/: sources.json
src/Control/Category/: Cartesian.hs  Tensor.hs
src/Control/Category/Tensor/: Expr.hs
src/Data/Bifunctor/: BiInvariant.hs  Module.hs  Monoidal.hs  Traversable.hs
src/Data/Bifunctor/Monoidal/: Specialized.hs
src/Data/Bifunctor/Rank2/: Traversable.hs
src/Data/Functor/: Categorical.hs  CategoricalV2.hs  Invariant.hs  Module.hs  Monoidal.hs  Traversable.hs
src/Data/Functor/Monoidal/: Generic.hs  Specialized.hs
src/Data/Functor/Rank2/: Traversable.hs
src/Data/Trifunctor/: Module.hs  Monoidal.hs  Traversable.hs
src/Data/Trifunctor/Rank2/: Traversable.hs
test/: Main.hs
test/Control/Category/: CartesianSpec.hs  LawsSupport.hs  TensorSpec.hs
test/Data/Bifunctor/Monoidal/: LawsSpec.hs
test/Data/Bifunctor/Rank2/: TraversableSpec.hs
test/Data/Functor/Monoidal/: GenericSpec.hs  LawsSpec.hs
test/Data/Functor/Rank2/: TraversableSpec.hs
test/Data/Trifunctor/Rank2/: TraversableSpec.hs
